--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -1,6 +1,4 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
+
 @import "tailwindcss";
 
 @theme {
@@ -79,47 +77,54 @@
 } */
 @layer components {
 
-  .toast-container {
+  .notifyx-container {
     @apply fixed z-50 p-4 flex flex-col gap-2;
   }
 
-  .toast-container[data-position="top-right"] {
+  .notifyx-container[data-position="top-right"] {
     @apply top-0 right-0;
   }
 
-  .toast-container[data-position="top-left"] {
+  .notifyx-container[data-position="top-left"] {
     @apply top-0 left-0;
   }
 
-  .toast-container[data-position="bottom-right"] {
+  .notifyx-container[data-position="bottom-right"] {
     @apply bottom-0 right-0;
   }
 
-  .toast-container[data-position="bottom-left"] {
+  .notifyx-container[data-position="bottom-left"] {
     @apply bottom-0 left-0;
   }
 
-  .toast {
-    @apply flex items-center gap-2 p-4 rounded-lg shadow-lg min-w-[300px] max-w-[400px];
+  .notifyx {
+    @apply flex items-center gap-2 p-2 rounded-lg shadow-lg min-w-[300px] max-w-[400px];
   }
 
-  .toast-success {
-    @apply bg-green-500 text-white;
+  .notifyx-success {
+    @apply bg-green-50 border-green-200 text-green-800;
   }
 
-  .toast-error {
-    @apply bg-red-500 text-white;
+  .notifyx-error {
+    @apply bg-red-50 border-red-200 text-red-800;
   }
 
-  .toast-warning {
-    @apply bg-yellow-500 text-white;
+  .notifyx-warning {
+    @apply bg-amber-50 border-amber-200 text-amber-800;
   }
 
-  .toast-info {
-    @apply bg-blue-500 text-white;
+  .notifyx-info {
+    @apply bg-blue-50 border-blue-200 text-blue-800;
+  }
+  .notifyx-default {
+    @apply bg-sky-50 border-sky-200 text-sky-950;
   }
 
-  .toast-close {
+  .notifyx-close {
     @apply ml-auto cursor-pointer hover:opacity-75 transition-opacity;
+  }
+
+  .notifyx-msg {
+    @apply text-sm font-medium
   }
 }
